[project]
name = "gyjd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.uv]
dev-dependencies = ["pytest >=8.3.3,<9"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
